Update linkedIn link

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 									<span class="image">
 										<img src="images/pic11.jpg" alt="" />
 									</span>
-									<a href="https://www.linkedin.com/company/devopsdaysdesmoines/"">
+									<a href="https://www.linkedin.com/company/devopsdsm/"">
 										<h2>LinkedIn</h2>
 										<div class="content">
 											<p>LinkedIn page for Agile + DevOpsDays Des Moines.</p>
