fix desc for linkedIn

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 									<a href="https://www.linkedin.com/company/devopsdsm/"">
 										<h2>LinkedIn</h2>
 										<div class="content">
-											<p>LinkedIn page for Agile + DevOpsDays Des Moines.</p>
+											<p>LinkedIn page for DevOps Des Moines.</p>
 										</div>
 									</a>
 								</article>
