add logo and cleanup html verbiage

--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>DevOps DSM</title>
+		<link rel="icon" href="images/SourceLogoNoName.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,7 +13,7 @@
 					<header id="header">
 						<div class="inner">
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">DevOpsDSM</span>
+									<span class="symbol"><img src="images/SourceLogoNoName.png" alt="" /></span><span class="title">DevOpsDSM</span>
 								</a>
 								<nav>
 									<ul>
@@ -33,7 +34,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is a website for DevOps DSM information.</h1>
+								<h1>DevOps Des Moines information and links.</h1>
 								<p>DevOpsDSM is a local user group where the meetings can range from discussions about your favorite language, infrastructure technology, and even workshops on how to use specific tools.</p>
 							</header>
 							<section class="tiles">
@@ -44,7 +45,7 @@
 									<a href="https://twitter.com/DevOpsDSM">
 										<h2>X / Twitter</h2>
 										<div class="content">
-											<p>X formerly known as Twitter page for DevOps DSM.</p>
+											<p>X formerly known as Twitter page for DevOps Des Moines.</p>
 										</div>
 									</a>
 								</article>
@@ -66,7 +67,7 @@
 									<a href="https://www.meetup.com/devopsdsm/">
 										<h2>Meetup</h2>
 										<div class="content">
-											<p>Meetup page for DevOpsDSM</p>
+											<p>Meetup page for DevOps Des Moines.</p>
 										</div>
 									</a>
 								</article>
