logo on contact us page

--- a/app/generic.html
+++ b/app/generic.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>DevOps DSM</title>
+		<link rel="icon" href="images/SourceLogoNoName.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +15,7 @@
 						<div class="inner">
 
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">DevOpsDSM</span>
+									<span class="symbol"><img src="images/SourceLogoNoName.png" alt="" /></span><span class="title">DevOpsDSM</span>
 								</a>
 
 								<nav>
