DevOpsDSM name and more direct contact link

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>DevOps Des Moines information and links.</h1>
+								<h1>DevOpsDSM information and links.</h1>
 								<p>DevOpsDSM is a local user group where the meetings can range from discussions about your favorite language, infrastructure technology, and even workshops on how to use specific tools.</p>
 							</header>
 							<section class="tiles">
