--- a/app/generic.html
+++ b/app/generic.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<h1>Contact Us</h1>
 							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>For any communication, please view DevOpsDSM page on <a href="https://www.meetup.com/devopsdsm/">Meetup</a>.</p>
+							<p>For any communication, please view DevOpsDSM page on <a href="https://www.meetup.com/messages/?new_convo=true&member_id=243618784&name=Matt%20V/">Meetup</a>.</p>
 						</div>
 					</div>
 
